CHANGES.txt - 12/29/2001
------------------------

CHANGES IN CUPS V1.2.0a1

	- New ippReadFile(), ippReadIO(), ippWriteFile(), and
	  ippWriteIO() functions in CUPS API.
	- Removed fonts and GNU Ghostscript code from base CUPS
	  distribution; these are now available as part of ESP
	  Ghostscript, or by patching GNU Ghostscript using the
	  patches in the pstoraster directory.